# processing-millions-of-transmission-records-for-power-grid-infrastructure-analysis-at-scale

./: 02_grid_infrastructure_analysis_blog.md  02_grid_infrastructure_analysis_blog.md.bak2  Processing-Millions-of-Transmission-Records-for-Power-Grid-Analysis.md  README.md  article.md  benchmark_rust.py  config.yaml  power_grid_infrastructure_analysis.py  pyproject.toml
rust/bench/: Cargo.toml
rust/bench/src/: main.rs
rust/core/: Cargo.toml
rust/core/src/: lib.rs
rust/py/: Cargo.toml
rust/py/src/: lib.rs
src/: compute_kernel.py
