[project]
name = "processing-millions-of-transmission-records-for-power-grid-infrastructure-analys"
version = "0.1.0"
description = "Companion code for Medium article: processing millions of transmission records for power grid infrastructure analysis at scale"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "signalplot>=0.1",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
