[project]
name = "processing-millions-of-transmission-records-for-power-grid-infrastructure-analys"
version = "0.1.0"
description = "Companion code for Medium article: processing millions of transmission records for power grid infrastructure analysis at scale"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.0",
    "pytest>=8.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "signalplot>=0.1",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

# Optional Rust extension — build with:
#   pip install maturin && maturin develop --release -m rust/py/Cargo.toml
[tool.maturin]
manifest-path = "rust/py/Cargo.toml"
module-name = "processing_millions_of_transmission_records_for_power_grid_infrastructure_analysis_at_scale_rs"

